# Raytracer

./: .gitignore  200_100_8_800.ppm  200_40_8_800.ppm  20_10_20.ppm  20_10_4.ppm  20_10_8.ppm  20_40_4.ppm  20_40_8.ppm  400_200_8_800.ppm  40_40_8.ppm  40_40_8_800.ppm  CMakeLists.txt  DarkWall.ppm  HighRes.ppm  Lamp.ppm  LightWalls.ppm  image.ppm  image2.ppm  image3.ppm  image4.ppm  image5.ppm  image6.ppm  image7.ppm  preview.ppm  ref.ppm  room.ppm  room1.2.ppm  room1.ppm  room100.ppm  room16_8_4m.ppm  room200.ppm  room200p.ppm  room32_8_6.ppm  room32_8_8m.ppm  room40_8_4lm.ppm  room40_8_6l.ppm  room8_32_8m.ppm  room8_8_1ss.ppm  room8_8_2ss.ppm  room8_8_32s.ppm  (+7 more)
include/: camera.h  color.h  hit.h  light.h  material.h  plane.h  ray.h  rectangle.h  scene.h  sphere.h  triangle.h  vec3.h
src/: main.cpp  mc2_main.cpp  mc3_main.cpp  rt3_main.cpp  rt4_main.cpp  rt5_main.cpp  rt6_main.cpp  rt7_main.cpp  rt_room.cpp
